fix color contrast

--- a/_sass/color_schemes/dark.scss
+++ b/_sass/color_schemes/dark.scss
@@ -74,3 +74,5 @@ $code-bg-color: #796366;
 
 $warning-link-color: #a0baff;
 $warning-link-hover-color: #a0baff;
+
+$warning-color: #FFFFFF;
