--- a/_sass/color_schemes/light.scss
+++ b/_sass/color_schemes/light.scss
@@ -38,5 +38,7 @@ $table-background-color: #fdfdfd;
 $code-color: #c7254e;
 $code-bg-color: #f9f2f4;
 
-$warning-link-color: #444444;
-$warning-link-hover-color: #444444;
+$warning-link-color: #28478F;
+$warning-link-hover-color: #2F53A7;
+
+$warning-color: #575757;
