--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -523,12 +523,16 @@ div.highlighter-rouge div.highlight {
 }
 
 .warning a {
-  color: $warning-link-color;
+  color: $warning-link-color !important;
   text-decoration: underline;
 }
 
 /* Optional: Add a hover state for better UX */
 .warning a:hover {
-  color: $warning-link-hover-color;
+  color: $warning-link-hover-color !important;
   text-decoration: none;
+}
+
+.warning {
+  color: $warning-color !important; /* Changed from #757575 */
 }
